--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Future Imperfect by HTML5 UP</title>
+		<title>zy blog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,11 +21,9 @@
 						<h1><a href="index.html">Future Imperfect</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="#">Lorem</a></li>
-								<li><a href="#">Ipsum</a></li>
-								<li><a href="#">Feugiat</a></li>
-								<li><a href="#">Tempus</a></li>
-								<li><a href="#">Adipiscing</a></li>
+								<li><a href="#">学习注解</a></li>
+								<li><a href="#">项目记录</a></li>
+								<li><a href="#">面试记录</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
@@ -58,37 +56,31 @@
 								<ul class="links">
 									<li>
 										<a href="#">
-											<h3>Lorem ipsum</h3>
-											<p>Feugiat tempus veroeros dolor</p>
+											<h3>学习注解</h3>
+											<p>学习过程中遇到和解决的问题</p>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<h3>Dolor sit amet</h3>
-											<p>Sed vitae justo condimentum</p>
+											<h3>项目记录</h3>
+											<p>项目中遇到的问题和解决的办法</p>
 										</a>
 									</li>
 									<li>
 										<a href="#">
-											<h3>Feugiat veroeros</h3>
-											<p>Phasellus sed ultricies mi congue</p>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<h3>Etiam sed consequat</h3>
-											<p>Porta lectus amet ultricies</p>
+											<h3>面试记录</h3>
+											<p>面试过程中的不足与心得</p>
 										</a>
 									</li>
 								</ul>
 							</section>
 
 						<!-- Actions -->
-							<section>
+							<!-- <section>
 								<ul class="actions stacked">
 									<li><a href="#" class="button large fit">Log In</a></li>
 								</ul>
-							</section>
+							</section> -->
 
 					</section>
 
